--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Client-side application for downloading YouTube videos with HTML, CSS, and JavaScript.",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
