--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "live-server --port=8080"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/ucemrecan/youtube-video-downloader/issues"
   },
-  "homepage": "https://github.com/ucemrecan/youtube-video-downloader#readme",
-  "dependencies": {
-    "axios": "^1.6.8"
-  }
+  "homepage": "https://github.com/ucemrecan/youtube-video-downloader#readme"
 }
