--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
     "ytdl-core": "^4.11.5"
