Swagger docs created

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ytdl-core": "^4.11.5"
   }
 }
