--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,12 @@
   "author": "Umut Cemre Can",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.14.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "ytdl-core": "^4.11.5"
+    "swagger-ui-express": "^5.0.1"
   }
 }
