Docker integrated to project

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git@github.com/ucemrecan/youtube-video-downloader.git"
   },
+  "engines": {
+    "node": "18"
+  },
   "keywords": [
     "express.js",
     "youtube",
