--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,17 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server --port=8080"
+    "start": "http-server ./ -p 8080"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/ucemrecan/youtube-video-downloader.git"
+  },
+  "engines": {
+    "node": "18"
+  },
+  "dependencies": {
+    "http-server": "^14.0.0"
   },
   "keywords": [
     "vanilla-js",
