--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.1",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   }
 }
