--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "http-server ./ -p 8080"
+      "start": "http-server ./ -p 8080",
+      "build": "npm install"
     },
     "repository": {
       "type": "git",
