Update: package.json files

--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "video",
     "download",
     "api",
-    "server-side"
+    "server-side",
+    "docker",
+    "swagger"
   ],
   "author": "Umut Cemre Can",
   "license": "ISC",
