--- a/client/package.json
+++ b/client/package.json
@@ -1,35 +1,38 @@
-  {
-    "name": "client",
-    "version": "1.1.0",
-    "description": "Client-side application for downloading YouTube videos with HTML, CSS, and JavaScript.",
-    "main": "app.js",
-    "type": "module",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "http-server ./ -p 8080",
-      "build": "npm install"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+ssh://git@github.com/ucemrecan/youtube-video-downloader.git"
-    },
-    "engines": {
-      "node": "20"
-    },
-    "dependencies": {
-      "http-server": "^14.0.0"
-    },
-    "keywords": [
-      "vanilla-js",
-      "client-side",
-      "youtube",
-      "video",
-      "download"
-    ],
-    "author": "Umut Cemre Can",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/ucemrecan/youtube-video-downloader/issues"
-    },
-    "homepage": "https://github.com/ucemrecan/youtube-video-downloader#readme"
-  }
+{
+  "name": "client",
+  "version": "1.1.0",
+  "description": "Client-side application for downloading YouTube videos with HTML, CSS, and JavaScript.",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server ./ -p 8080",
+    "build": "npm install"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/ucemrecan/youtube-video-downloader.git"
+  },
+  "engines": {
+    "node": "20"
+  },
+  "dependencies": {
+    "http-server": "^14.0.0"
+  },
+  "keywords": [
+    "vanilla-js",
+    "client-side",
+    "youtube",
+    "video",
+    "download",
+    "html",
+    "css",
+    "javascript"
+  ],
+  "author": "Umut Cemre Can",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ucemrecan/youtube-video-downloader/issues"
+  },
+  "homepage": "https://github.com/ucemrecan/youtube-video-downloader#readme"
+}
