--- a/.github/workflows/client-cd.yml
+++ b/.github/workflows/client-cd.yml
@@ -4,12 +4,12 @@ on:
     push:
       branches: [ main ]
       paths:
-        - 'server/**'
+        - 'client/**'
   
     pull_request:
       branches: [ main ]
       paths:
-        - 'server/**'
+        - 'client/**'
 
 jobs:
   build-and-push:
