Update: package.json on client

--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,7 @@
     "client-side",
     "youtube",
     "video",
-    "download",
-    "html",
-    "css",
-    "javascript"
+    "download"
   ],
   "author": "Umut Cemre Can",
   "license": "ISC",
